# PhastFT

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  codecov.yml  profile.sh
.cargo/: config  config.toml
.github/workflows/: rust.yml
benches/: Makefile  README.md  bench.rs  benchmark.sh  benchmark_plots.py  bit_reversal.rs  fftw_conserve.rs  fftw_estimate.rs  fftw_measure.rs  fftw_patient.rs  heuristic_vs_tune.rs  interleave.rs  main.c  planner.rs  planner_mode.rs  plot_criterion_overlay.py  py_benchmarks.py  realfft.rs  requirements.txt  run_benches.py  rustfft.rs  utils.py
benches/common/: mod.rs
benches/fftw_lib/: mod.rs
examples/: benchmark.rs  benchmark_dit_planner.rs  benchmark_interleaved.rs  bit_reversal_control.rs  fftwrb.rs  profile.rs  rustfft.rs
hooks/: pre-commit
pybindings/: Cargo.toml  pyproject.toml
pybindings/src/: lib.rs
pyphastft/: Cargo.toml  audio_visual.py  example.py  pyproject.toml  requirements.txt  vis_qt.py
pyphastft/src/: lib.rs
scripts/: benchmark.sh  benchmark_plots.py  bravo.py  py_benchmarks.py  twiddle_generator.py
src/: bencher.rs  benchmark.rs  bravo.rs  cobra.rs  complex_nums.rs  fft.rs  kernels.rs  kernels_dit_simd.rs  lib.rs  main.rs  options.rs  parallel.rs  planner.rs  r2c_kernels.rs  rustfft.rs  twiddles.rs  utils.rs
src/algorithms/: bravo.rs  cobra.rs  dif.rs  dit.rs  mod.rs  r2c.rs
src/kernels/: codelets.rs  common.rs  dif.rs  dit.rs  dit_r22.rs  mod.rs
utilities/: Cargo.toml
utilities/src/: lib.rs
