[package]
name = "phastft"
version = "0.3.0"
edition = "2021"
authors = ["Saveliy Yusufov", "Shnatsel"]
license = "MIT OR Apache-2.0"
description = "A high-performance, quantum-inspired, implementation of FFT in pure Rust"
repository = "https://github.com/QuState/PhastFT"
keywords = ["quantum", "fft", "discrete", "fourier", "transform"]
categories = ["algorithms", "compression", "science"]
exclude = ["assets", "scripts", "benches"]

[dependencies]
num-traits = "0.2.19"
multiversion = "0.8.0"
num-complex = { version = "0.4.6", features = ["bytemuck"], optional = true }
bytemuck = { version = "1.23.2", optional = true }

[features]
default = []
complex-nums = ["dep:num-complex", "dep:bytemuck"]

[dev-dependencies]
criterion = "0.7.0"
fftw = "0.8.0"
rand = "0.9.2"
utilities = { path = "utilities" }

[[bench]]
name = "bench"
harness = false

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[profile.profiling]
inherits = "release"
debug = true

[package.metadata.docs.rs]
all-features = true
