[package]
name = "phastft"
version = "0.3.0"
edition = "2021"
authors = ["Saveliy Yusufov", "Shnatsel"]
license = "MIT OR Apache-2.0"
description = "A high-performance, quantum-inspired, implementation of FFT in pure Rust"
repository = "https://github.com/QuState/PhastFT"
readme = "README.md"
documentation = "https://docs.rs/phastft"
keywords = ["quantum", "fft", "discrete", "fourier", "transform"]
categories = ["algorithms", "compression", "science"]
exclude = ["assets", "scripts", "benches"]

[dependencies]
num-traits = "0.2.19"
multiversion = "0.8.0"
num-complex = { version = "0.4.6", features = ["bytemuck"], optional = true }
bytemuck = { version = "1.23.2", optional = true }
wide = "0.8.1"
rayon = { version = "1.11.0", optional = true }

[features]
default = []
complex-nums = ["dep:num-complex", "dep:bytemuck"]
parallel = ["dep:rayon"]

[dev-dependencies]
criterion = "0.8.0"
fftw = "0.8.0"
rand = "0.9.2"
utilities = { path = "utilities" }

[[bench]]
name = "bench"
harness = false

[profile.profiling]
inherits = "release"
debug = true

[package.metadata.docs.rs]
all-features = true
