[package]
name = "pybindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pybindings"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.2", features = ["num-complex"] }
num-complex = "0.4.4"
spinoza = { git = "https://github.com/QuState/spinoza.git", tag = "v0.5.1" }
phastft = { path = ".." }